# biohackathon

./: .gitignore  ARCHITECTURE_BEFORE_AND_AFTER.md  ARCHITECTURE_DIAGRAMS.md  COMPARISON_SUMMARY.md  COMPLETE_REPOSITORY_GUIDE.md  COMPLETE_SYSTEM_EXPLANATION.md  CONTRIBUTING.md  EDISON_COMPLETE.md  EDISON_EXPLAINED.ipynb  EVASION_DETECTION_DEMO.ipynb  EVASION_SOLUTIONS_GUIDE.md  FILE_STRUCTURE.md  IMPLEMENTATION_VERIFICATION_REPORT.md  INTEGRATION_ARCHITECTURE.md  LICENSE  PHASE_2_COMPLETE_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_NEW.md  RESTRUCTURE_PLAN.md  UNIFIED_PIPELINE_USAGE.md  esm_biosecurity_screening.ipynb  notebook_integration_demo.ipynb  pyproject.toml
data/dangerous/: canonical.json
data/families/: AB_toxin_B.fasta  Clostridium.fasta  DT_like.fasta  RIP.fasta
docs/: README.md
l2_mds/: L2_CONFIG.md  L2_DEPLOYMENT.md  L2_IMPLEMENTATION_SUMMARY.md  L2_QUICK_REFERENCE.md
synthshield/: __init__.py  implement_plan.txt  pipeline.py
synthshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synthshield/audit/: verify_chain.py
synthshield/blockchain/: ethereum_anchor.py
synthshield/blockchain/contracts/: ForensicAnchor.sol
synthshield/core/: __init__.py  demo_l2_integration.py  embeddings.py  enhanced_edison.py  evasion_detection.py  forensic_orchestrator.py  notebook_integration.py  screening.py  sentinel_head.py  trained_classifier.py
synthshield/data/: datasets.py
synthshield/detection/: blackbox.py  edison_window.py
synthshield/frontend/: App.jsx
synthshield/hardware/: blackbox.py  demo_edison.py  interlock.py
